--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,17 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_rest:
+     param_fetcher_listener: true
+     body_listener: true
+     format_listener: true
+     view:
+         view_response_listener: true
+     routing_loader:
+         default_format: json
+         include_format:       false
+
+sensio_framework_extra:
+     view:
+         annotations: false
