--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
-    },
+        "incenteev/composer-parameter-handler": "~2.0",
+        "jms/serializer-bundle": "0.12.*",
+        "friendsofsymfony/rest-bundle": "1.3.*"
+},
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
