--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,6 +68,12 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+sonata_block:
+    default_contexts: [cms]
+    blocks:
+        sonata.admin.block.admin_list:
+            contexts:   [admin]
+
 fos_rest:
      param_fetcher_listener: true
      body_listener: true
