--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/serializer-bundle": "0.12.*",
         "friendsofsymfony/rest-bundle": "1.3.*",
-        
+
+        "knplabs/knp-paginator-bundle": "2.3.*",
         "sonata-project/admin-bundle": "2.2.*",
         "sonata-project/core-bundle": "2.2.*",
         "sonata-project/doctrine-orm-admin-bundle": "2.2.*"
